--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <h1>This is test 2</h1>
   <h2>Test changes in github</h2>
   <p>add new modif</p>
+  <p>one more paragraphe</p>
 </body>
 </html>
